criada tag script

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     Desenvolvido por <a href="https://www.linkedin.com/in/felipe-alves-6a67b6256/" target="_blank">@felipealvescr</a>
     na trilha Start na Programação 🤘 da OneBitCode.
   </div>
+
+  <script src="./index.js"></script>
 </body>
 
 </html>
